proxychains/tsocks added

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -142,6 +142,8 @@
       - "chromium-browser"
       - "wget"
       - "curl"
+      - "tsocks"
+      - "proxychains"
       - "rtorrent"
       - "transmission"
       - "transmission-daemon"
