--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: add partner repo
   apt_repository: repo="deb http://archive.canonical.com/ubuntu {{ansible_distribution_release}} partner" state=present update_cache=yes
+  when: ansible_distribution == 'Ubuntu'
 
 - name: install editors
   sudo: yes
