--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,7 +19,6 @@
   with_items:
       - "ubuntu-restricted-extras"
       - "ripoff"
-      - "gnome-media"
   tags: ubuntumedia
 
 - name: install media
@@ -61,8 +60,6 @@
   when: ansible_distribution == 'Ubuntu'
   with_items:
       - "hexdiff"
-      - "radare-gtk"
-      - "radare2-plugins"
   tags: hexeditors-ubuntu
 
 - name: install mail
@@ -196,7 +193,6 @@
   when: ansible_distribution == 'Ubuntu'
   with_items:
       - "chromium-browser"
-      - "skype"
   tags: network-ubuntu network
 
 - name: install network debian
@@ -229,3 +225,12 @@
       - "secure-delete"
   tags: security-defend
 
+
+- name: install remote desktop related packages
+  sudo: yes
+  action: apt pkg="{{item}}" state=present update_cache=no
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '18.04'
+  with_items:
+      - "x2goserver"
+      - "x2goclient"
+  tags: rdp-like
