--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -325,3 +325,6 @@
       - "x2goserver"
       - "x2goclient"
   tags: rdp-like
+
+- name: Install pyenv and prerequisites
+  import_tasks: pyenv.yml
